workspace = { members = [ "src/ecs/wasm","src/vdom"] }
[package]
name = "hapt-rt"
version = "1.0.0"
authors = ["Dylan Miller <ehpt@hapt.me>"]
description = "haptloader"
license = "MIT/Apache-2.0"
repository = "https://github.com/djmill0326/haptloader"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
